Add production configuration values

--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -8,13 +8,15 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": ""
+        "DefaultConnection": "Host=postgres.railway.internal;Port=5432;Database=railway;Username=postgres;Password=GicRdazdjYsQrOMytneGmQRsPechSNpx"
     },
     "Jwt": {
-        "SecretKey": "",
+        "SecretKey": "my-super-secret-production-key-minimum-32-characters-for-railway-deployment",
         "Issuer": "MyAPIv3",
         "Audience": "sass_bt_mobile",
         "ExpiryMinutes": 1440
     },
-    "AllowedOrigins": []
+    "AllowedOrigins": [
+        "*"
+    ]
 }
